--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calineva - The Ultimate GTA San Andreas Multiplayer Mod</title>
 
+  <!-- don't index for now -->
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="googlebot" content="noindex, nofollow">
+
   <!-- SEO Meta Tags -->
   <meta name="description" content="Experience the definitive multiplayer mod for GTA San Andreas with unprecedented features, performance, and cross-platform capability.">
   <meta name="keywords" content="GTA San Andreas, multiplayer mod, Calineva, GTA SA, GTA SA-MP, gaming, modding, cross-platform, Android, PC">
