--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           </div>
           <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-extrabold mb-4 sm:mb-6 leading-tight">
             <span class="text-white">Redefine</span>
-            <span class="bg-clip-text text-transparent bg-gradient-to-r from-primary-light to-purple-400"> San Andreas</span>
+            <span class="block bg-clip-text text-transparent bg-gradient-to-r from-primary-light to-purple-400"> San Andreas</span>
             <span class="text-white"> Modding</span>
           </h1>
           <p class="text-lg sm:text-xl text-gray-300 mb-6 sm:mb-8 max-w-2xl">Experience the <i>definitive</i> multiplayer mod for GTA San Andreas with unprecedented features, performance, and cross-platform capability.</p>
